# pigcast

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  flake.nix  rust-toolchain.toml
assets/: main.css
res/: config.toml  cumtown  cumtown.rss  sounds.rss  style.css
src/: config.rs  error.rs  main.rs  root.rs  theme.rs
src/components/: sidebar.rs
src/elements/: controls.rs  mod.rs  navbar.rs
