[package]
name = "pigcast"
version = "0.1.0"
authors = ["Vanta_1 <mcoopersandys@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6", features = ["desktop"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
